Revert "bugfix: double horizontal scroll on small width screen"
This reverts commit 057eb4194fb9dce9a896f2243956991ba4591267.

--- a/projects/charon/src/app/core/layout/layout-footer/layout-footer.component.scss
+++ b/projects/charon/src/app/core/layout/layout-footer/layout-footer.component.scss
@@ -3,7 +3,6 @@
 :host {
   background-color: $color-black;
   display: block;
-  padding: $grid-step * 1.5 0;
   width: 100%;
 }
 
@@ -12,7 +11,7 @@
   color: $color-white;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  margin: 0 auto;
+  margin: $grid-step * 1.5 auto;
   padding: 0 $page-side-padding;
   width: $page-width + $page-side-padding * 2;
 }
